--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "latest",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.5",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "latest",
     "clsx": "latest",
@@ -50,6 +51,7 @@
     "lucide-react": "latest",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
